Fix filepage on mobile

--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -165,7 +165,7 @@
       display: flex;
       left: 0px;
       bottom: -1px;
-      width: calc(100% - 14px);
+      width: 100%;
       height: 1px;
       background-color: white;
       z-index: 2;
@@ -182,6 +182,7 @@
     }
 
     .button-dislike {
+      margin-right: 0px;
       float: right;
     }
   }
